--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "@middy/core": "^4.0.9",
     "@middy/http-json-body-parser": "^4.0.9",
     "aws-lambda": "^1.0.7",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "tsyringe": "^4.8.0",
+    "twilio": "^4.19.0",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.129"
+    "@types/aws-lambda": "^8.10.129",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/pg": "^8.10.9"
   }
 }
