--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,7 @@ provider:
 functions:
   signup:
     handler: app/handler.Signup
+    timeout: 30
     events:
       - httpApi:
           path: /signup
@@ -26,6 +27,9 @@ functions:
   verify:
     handler: app/handler.Verify
     events:
+      - httpApi:
+          path: /verify
+          method: get
       - httpApi:
           path: /verify
           method: post
